# Core

./: Compiler.hs  CorePrelude.hs  GMachine.hs  LICENSE  Lexer.hs  Lexer.x  Parser.hs  Parser.y  Pretty.hs  PrettyP.hs  README.md  Types.hs  core-compiler.cabal  main.hs  prelude.cor  testCore.txt  testProgram1.cor
SamplePrograms/: prelude.cor  tp1.cor  tp10.cor  tp11(nested addition).cor  tp12(simple addition).cor  tp13(packing).cor  tp14(conditional packing).cor  tp15(nested case).cor  tp2.cor  tp3.cor  tp4.cor  tp5.cor  tp6.cor  tp7.cor  tp8.cor  tp9.cor
app/: Parser.y  main.hs
src/: GMachine.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.y  Pretty.hs  Types.hs  main.hs  runAllTests.sh
src/Core/: Compiler.hs  G.hs  GMachine.hs  Grammar.hs  Prelude.hs  Pretty.hs
src/SamplePrograms/: tp1.cor  tp11(nested addition).cor  tp13(packing).cor  tp14(conditional packing).cor  tp15(nested case).cor  tp2.cor  tp3.cor  tp6.cor  tp8.cor  tp9.cor
