name:                core-compiler
version:             0.1.0.1
synopsis:            compile your own mini functional language with Core
stability:           functional
description:         This package doubles as a compiler and as a module with which anyone can compile their own functional programming language by parsing into the 'CoreExpr' datatype
homepage:            https://github.com/aneksteind/Core#readme
license:             MIT
license-file:        LICENSE
author:              David Anekstein
maintainer:          aneksteind@gmail.com
copyright:           2016 David Anekstein
category:            Compiler, Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Core.Compiler,
                       Core.GMachine,
                       Core.Grammar,
                       Core.Prelude,
                       Core.Pretty
  other-modules:       Core.G
  build-depends:       base >= 4.7 && < 5,
                       unordered-containers,
                       containers,
                       text
  default-language:    Haskell2010

executable core-compiler-exe
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.7,
                       core-compiler,
                       array
  other-modules:       Lexer,
                       Parser
  build-tools:         happy, alex
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aneksteind/Core
